--- a/css/homepage/home.css
+++ b/css/homepage/home.css
@@ -26,8 +26,57 @@ header{
 /* Search Css*/
 #search{
     height:400px;
-    border:5px double green;
+    background-image: url('images/foodWallpaper.png');
+    background-repeat: no-repeat;
+    /* background-size: cover; */
+    background-size:100% 400px;
 }
+#logo{
+    height:150px;
+    width:150px;
+    background-color: white;
+    border-radius: 50%;
+    margin-left:45%;
+    margin-top:1%;
+    position:absolute;
+    font-size: 90px;
+}
+
+#logo > span {
+    margin-left: 22%;
+    margin-top: 12%;
+    position: absolute;
+    font-family:Georgia, 'Times New Roman', Times, serif
+}
+
+#heading{
+    font-size:60px;
+    color:white;
+    margin-left: 30%;
+    margin-top: 13%;
+    position: absolute;
+}
+
+#dropdown{
+    width:50%;
+    /* border:2px solid white; */
+    height:60px;
+    margin-left: 28%;
+    margin-top: 20%;
+    position: absolute;
+}
+
+select{
+    font-size:20px;
+    text-align:center;
+    width:40%;
+    height:60px;
+}
+
+#restaurants{
+    width:59%;
+}
+
 /* Quicksearch Css*/
 #quicksearch{
     height:600px;
