--- a/css/homepage/home.css
+++ b/css/homepage/home.css
@@ -80,8 +80,72 @@ select{
 /* Quicksearch Css*/
 #quicksearch{
     height:600px;
-    border:5px groove lightcoral;
+    width:80%;
+    margin-left: 10%;
+    margin-top:2%;
+    margin-bottom:2%;
+    /* border:5px groove lightcoral; */
 }
+
+#quickHeading{
+    color:#3b2632;
+    font-size: 30px;
+    font-weight: bold;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    display:block;
+    margin-left: 2%;
+}
+
+#quickSubHeading{
+    color:gray;
+    font-size: 20px;
+    line-height: 3;
+    margin-left: 2%;
+}
+
+.tileContainer{
+    height:180px;
+    width:30%;
+    /* border:2px solid black; */
+    margin-left: 2%;
+    margin-top: 3%;
+    float:left;
+    box-shadow: 10px 20px 10px #896077;;
+}
+
+.tileComponent1{
+    width:52%;
+    float:left;
+}
+
+.tileComponent1>img {
+    width:100%; 
+    height:180px
+}
+
+.tileComponent2{
+    width:45%;
+    float: left;
+    height:180px;
+    margin-left:3%;
+    margin-top:15%;
+}
+.compHeading{
+    color:#3b2632;
+    font-size:25px;
+    font-weight: bold
+}
+
+.compHeading>a{
+    color:#3b2632 
+}
+
+
+.compSubHeading{
+    color:gray;
+    font-size:20px;
+}
+
 /* footer Css*/
 footer{
     height:80px;
